DB-10230 fix SpotBugs