@@ -356,8 +356,6 @@ public class AlterTableConstantOperation extends IndexConstantOperation {
             throw StandardException.newException(SQLState.LANG_MODIFYING_PRIMARY_KEY_ON_NON_EMPTY_TABLE,tableDescriptor.getQualifiedName());
         }
 
-        List<String> constraintColumnNames = Arrays.asList(cd.getColumnDescriptors().getColumnNames());
-
         ColumnDescriptorList columnDescriptorList = tableDescriptor.getColumnDescriptorList();
         int nColumns = columnDescriptorList.size();
 
@@ -366,11 +364,6 @@ public class AlterTableConstantOperation extends IndexConstantOperation {
         //   o create array of collation id's to tell collation id of each
         //     column in table.
         ExecRow template = com.splicemachine.db.impl.sql.execute.RowUtil.getEmptyValueRow(columnDescriptorList.size(), lcc);
-
-        TxnView parentTxn = ((SpliceTransactionManager)tc).getActiveStateTxn();
-
-        // How were the columns ordered before?
-        int[] oldColumnOrdering = DataDictionaryUtils.getColumnOrdering(parentTxn, tableId);
 
         // We're adding a uniqueness constraint. Column sort order will change.
         int[] collation_ids = new int[nColumns];
@@ -530,7 +523,7 @@ public class AlterTableConstantOperation extends IndexConstantOperation {
 
                 ModifyColumnConstantOperation updateNullabilityAction =
                         new ModifyColumnConstantOperation(td.getSchemaDescriptor(), td.getName(), td.getUUID(),
-                                pkColumnInfo, new ConstantAction[0], new Character('\0'), behavior, null);
+                                pkColumnInfo, new ConstantAction[0], Character.valueOf('\0'), behavior, null);
                 updateNullabilityAction.executeConstantAction(activation);
                 hasColumnUpdate = true;
             }
@@ -578,11 +571,6 @@ public class AlterTableConstantOperation extends IndexConstantOperation {
         //   o create array of collation id's to tell collation id of each
         //     column in table.
         ExecRow template = com.splicemachine.db.impl.sql.execute.RowUtil.getEmptyValueRow(columnDescriptorList.size(), lcc);
-
-        TxnView parentTxn = ((SpliceTransactionManager)tc).getActiveStateTxn();
-
-        // How were the columns ordered before?
-         int[] oldColumnOrdering = DataDictionaryUtils.getColumnOrdering(parentTxn, tableId);
 
         // We're adding a uniqueness constraint. Column sort order will change.
         int[] collation_ids = new int[nColumns];
